# mlpf-itwinai-plugin

./: .gitignore  AUTHORS.md  CHANGELOG  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  jupyter.Dockerfile  pipeline_itwinai.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/linters/: .ruff.toml  mlc_config.json
.github/workflows/: pytest.yaml
parameters/: pyg-clic-itwinai.yaml
scripts/jsc/: README.md  install_env.sh  interactive.sh  runall_strategies.sh  scaling-test.sh  slurm.jsc.sh
scripts/vega/: README.md  install_env.sh  interactive.sh  runall_strategies.sh  scaling-test.sh  slurm.vega.sh
src/itwinai/plugins/mlpf/: utils.py
src/itwinai/plugins/mlpf/model/: PFDataset.py  __init__.py  gnn_lsh.py  logger.py  losses.py  mlpf.py  trainer_itwinai.py  utils.py
