[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpf-itwinai-plugin"
# Matches upstream MLPF version for simplicity
version = "2.2.0"
description = "Machine-learned Particle Flow plugin for itwinai"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Matteo Bunino", email = "matteo.bunino@cern.ch" }]
dependencies = [
    "itwinai[torch]@git+https://github.com/interTwin-eu/itwinai@unified-trainers",
    "pytest>=8.3.4",
]

[tool.setuptools.packages.find]

# Declare this package as part of the `itwinai.plugins` namespace
where = ["src"]

# Make sure to list all the plugin subfolders here,
# otherwise the plugin may not be installed correctly!
include = ["itwinai.plugins.mlpf"]

# Ruff configuration: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
